# golden-ratio-compendium

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
code/javascript/: package.json  type-scale.d.ts  type-scale.js
code/python/: calculator.py  fibonacci.py
code/rust/: Cargo.toml  golden_ratio.rs
docs/: 01-mathematics.md  02-history.md  03-nature.md  04-art-architecture.md  05-design.md  06-music.md  07-photography.md  08-finance.md  09-computer-science.md  10-myths-debunked.md  11-logo-design.md  INDEX.md
examples/: applications.md
src/golden_ratio/: __init__.py  cli.py  constants.py  core.py  design.py  fibonacci.py  hashing.py  phyllotaxis.py  trading.py
tests/: __init__.py  test_constants.py  test_core.py  test_design.py  test_fibonacci.py  test_trading.py
