[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "golden-ratio"
version = "1.0.0"
description = "A comprehensive toolkit for working with the golden ratio and Fibonacci sequences"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Golden Ratio Compendium Contributors"}
]
keywords = [
    "golden-ratio",
    "phi",
    "fibonacci",
    "mathematics",
    "design",
    "typography",
    "trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Multimedia :: Graphics",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
golden-ratio = "golden_ratio.cli:main"

[project.urls]
Homepage = "https://github.com/golden-ratio-compendium/golden-ratio-compendium"
Documentation = "https://github.com/golden-ratio-compendium/golden-ratio-compendium#readme"
Repository = "https://github.com/golden-ratio-compendium/golden-ratio-compendium"
Issues = "https://github.com/golden-ratio-compendium/golden-ratio-compendium/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
